# cudaproject

./: .gitignore  CMakeLists.txt  README.md
src/: headers.h  jpegprocess.cu  jpegprocess.h  main.cu  utility.h
src/core/: headers.cuh  headers.h  imageprocess.cu  imageprocess.cuh  imageprocess.h  jpegde.cu  jpegde.cuh  jpegprocess.cu  jpegprocess.h  templatematching.cu  templatematching.cuh  utility.cuh  utility.h  videode.cu  videode.cuh
